<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Porshi App</string>
    <string name="ringtones_text">Ringtones</string>
    <string name="hint_apps_search">Enter contact name</string>
    <string name="splashscreen">Splash screen</string>
    <string name="galarydes">This Show all of porshi images</string>
    <string name="webdes">This is show fb,websight and all</string>
    <string name="musdes">This is show you short music</string>
    <string name="favdes">it.s show you favourite music</string>
    <string name="aboutdes">it,s show your about porshi</string>
    <string name="description_zoom_touch_close">I dont know</string>
    <string name="about">Native Name: Sabrina Porshi\nBirth Name: Sabrina Ehsan\nBron: (30-JULY-1995) Brahmanbaria,Bangladesh\nOrigin: Bangladesh\nOccupation: Singer</string>
    <string name="first">First Music Video: "Tomari Porosh"\nFirst Solo Album: Porshi(2010)\nFirst Film: (Mental: it can be your love story) Role:(Special Appearance) Notes: Unreleased</string>

    <string name="early">Porshi was born on 30 July 1995 to a Muslim family in Dhaka, Bangladesh. Her home district is Brahmanbaria. She grew up in Uttara a small part of Dhaka city.Porshi lived at Uttara for 14 years. She moved to "Cambrian College" for to study commerce.</string>



     <string name="music">In 2007, Porshi took part in a singing competition named "Komol kuri" organized by the government, and became winner in "country song" category.In 2008, Porshi participated in Channel i "Khude gaan raj" Singing Competition, her first on-screen appearance. She became the second runner up.\n2008-2010 :Porshi started her music career professional when she was in "khude gaan raj" competition in 2008. She did her first playback in 2009.That was also her first studio recording.In 2009 she started the work of her solo album Porshi. She made the album with 5 music director.\nThe album was finished in April 2010. The label "Laser Vision" released the album in Eid-ul-Fitr 2010.\n2011-2012: After the first album, Porshi started to work as a playback singer from 2011.Her first recorded song in 2011 was "Kothao chile na tumi" with Arfin Rumey. On 14 February 2012 Porshi released her second solo album, Porshi 2. She also did playback songs in 2012. In 2012 Porshi announced her band named "Bornomala".\n2013-Present :\nIn Eid-ul-Ftr she released her third solo album Porshi 3.\nMusic Video:\nHer first music video was "Tomari porosh" with Arfin Rumey, from her first album Porshi. This video was directed by Rommo Khan. Then Porshi made another three music videos from her second solo album in 2012. "Khuje khuje", Shudhu tore and Boro Eka "Khuje khuje ft Arfin Rumey" and "Shudhu Tore ft ZooEL Morshed" and "Boro Eka"\nIn 2013 Porshi made her 5th music video from her album Porshi 3. Porshi and the composer and co-singer of this song Imran acted in this music video.\n\nMovie Music :\n1) Year: "2009" Song: "Chacchu" Movie: "Chacchu amar chacchu".\n2) Year: "2015" Song: "Moner Duyar" Movie: "Aro Bhalobashbo Tomay".\n3) Year: "2015" Song:"Tumi Amar" Movie: "Aro Bhalobashbo Tomay".</string>

       <string name="award">1) Year:"2011" Award:"Merial Prothom Alo Awards" Category: "Best Singer Female" Alubum/Song: "Nilanjona" Result: "Nominated" \n2) Year:"2013" Award: "Merial Prothom Alo Award" Category: "Best Singer Female" Alubum/Song: "Porshi3" Result: "Nominated".\n\nReferences: Wekipedia</string>

       <string name="dev">Develop by: "Xplore-Ict" (Mehedi Hasan Emon)\nEmail:emon@xploreict.com\nWebsite:www.xploreict.com</string>



    <string name="webn">Porshi Online</string>
</resources>
